added page - add new venue

--- a/travel/templates/travel/add_venue.html
+++ b/travel/templates/travel/add_venue.html
@@ -1,7 +1,20 @@
 {% extends 'travel/base.html' %} 
 
-
 {% block content %}
-<h1>Add Venue To Database</h1>
 
+<h1>Add Venue To Database</h1>
+<br /><br />
+
+{% if submitted %} 
+Your Venue Was Submitted Succefully! 
+
+{% else %} 
+
+<form action="" method="POST">
+    {% csrf_token %} 
+    {{ form.as_p }}
+    
+	<input type="submit" value="Submit" class="btn btn-success" />
+</form>
+{% endif %}
 {% endblock %}
