--- a/travel/templates/travel/navbar.html
+++ b/travel/templates/travel/navbar.html
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'add-venue' %}">Add Venue</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'list-venues' %}">Venues</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
