--- a/travel/templates/travel/navbar.html
+++ b/travel/templates/travel/navbar.html
@@ -16,6 +16,9 @@
             <a class="nav-link" href="{% url 'list-travels' %}">Travels</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'add-travel' %}">Add Travel</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'add-venue' %}">Add Venue</a>
           </li>
           <li class="nav-item">
