--- a/travel/templates/travel/travel_list.html
+++ b/travel/templates/travel/travel_list.html
@@ -25,6 +25,9 @@
             </ul>
           </p>
         </div>
+        <div class="card-footer text-muted">
+          <a href="{% url 'update-travel' travel.id %}" class="btn btn-outline-secondary btn-sm">Update Travel</a>
+        </div>
       </div>
       <br>
     {% endfor %} 
