created function delete travel

--- a/travel/templates/travel/travel_list.html
+++ b/travel/templates/travel/travel_list.html
@@ -27,6 +27,8 @@
         </div>
         <div class="card-footer text-muted">
           <a href="{% url 'update-travel' travel.id %}" class="btn btn-outline-secondary btn-sm">Update Travel</a>
+
+          <a href="{% url 'delete-travel' travel.id %}" class="btn btn-outline-danger btn-sm">Delete Travel</a>
         </div>
       </div>
       <br>
