--- a/travel/templates/travel/navbar.html
+++ b/travel/templates/travel/navbar.html
@@ -27,6 +27,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'venue_text' %}">Venue Text File</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'venue_csv' %}">Venue CSV File</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
