--- a/travel/templates/travel/venue.html
+++ b/travel/templates/travel/venue.html
@@ -6,7 +6,7 @@
 <br>
 
 <table class="table table-striped table-hover table-bordered">
-{% for venue in venue_list %}
+{% for venue in venues %}
 <tr>
     <td>
         <a href="{% url 'show-venue' venue.id %}">{{ venue }}</a> <br>
@@ -19,4 +19,27 @@
 </tr>
 {% endfor %}
 </table>
+<!-- <br><br>
+{{ venues }} <br>
+Has Previous: {{ venues.has_previous }} <br>
+Has Next: {{ venues.has_next }} <br>
+Current Page: {{ venues.number }} <br>
+Number of Pages: {{ venues.paginator.num_pages }} <br> -->
+<br><br><hr>
+
+{% if venues.has_previous %}
+    <a href="?page=1">&laquo First</a>
+    <a href="?page={{ venues.previous_page_number }}">Previous</a>
+
+
+{% endif %}
+
+Page {{ venues.number }} of {{ venues.paginator.num_pages }}
+
+{% if venues.has_next %}
+<a href="?page={{venues.next_page_number }}">Next</a>
+<a href="?page={{ venues.paginator.num_pages }}">Last &raquo</a>
+
+{% endif %}
+
 {% endblock %}
