--- a/travel/templates/travel/navbar.html
+++ b/travel/templates/travel/navbar.html
@@ -25,21 +25,17 @@
             <a class="nav-link" href="{% url 'list-venues' %}">Venues</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'venue_text' %}">Venue Text File</a>
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'venue_csv' %}">Venue CSV File</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'venue_pdf' %}">Venue PDF File</a>
-          </li>
+          
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              Download
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="{% url 'venue_text' %}">Venue Text File</a></li>
+              <li><a class="dropdown-item" href="{% url 'venue_csv' %}">Venue CSV File</a></li>
+              <li><a class="dropdown-item" href="{% url 'venue_pdf' %}">Venue PDF File</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
