--- a/travel/templates/travel/navbar.html
+++ b/travel/templates/travel/navbar.html
@@ -24,10 +24,15 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'list-venues' %}">Venues</a>
           </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          </li>
+          {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">Login</a>
           </li>
-          
+          {% endif %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Download
