styled register form

--- a/travel/templates/travel/base.html
+++ b/travel/templates/travel/base.html
@@ -9,6 +9,8 @@
   <body>
     {% include 'travel/navbar.html' %}
 
+    <style>body {background: #f4f4f4 ;}</style>
+
 
 <br>
 <div class="container">
