authenticated add, delete, update functions

--- a/travel/templates/travel/add_venue.html
+++ b/travel/templates/travel/add_venue.html
@@ -1,7 +1,7 @@
 {% extends 'travel/base.html' %} 
 
 {% block content %}
-
+{% if user.is_authenticated %}
 <h1>Add Venue To Database</h1>
 <br /><br />
 
@@ -17,4 +17,11 @@ Your Venue Was Submitted Succefully!
 	<input type="submit" value="Submit" class="btn btn-success" />
 </form>
 {% endif %}
+
+{% else %}
+<h1>Sorry! You Must Be Logged In To View This Page...</h1>
+
+<a href="{% url 'login' %}">Login Here</a>
+
+ {% endif %}
 {% endblock %}
