--- a/travel/templates/travel/update_travel.html
+++ b/travel/templates/travel/update_travel.html
@@ -1,6 +1,7 @@
 {% extends 'travel/base.html' %}
 
 {% block content %}
+{% if user.is_authenticated %}
     <h1>Update Venue...</h1>
     <br>
     <form action="" method="POST">
@@ -10,6 +11,11 @@
         <input type="submit" value="Update" class="btn btn-secondary">
     </form>
 
-      
+    {% else %}
+    <h1>Sorry! You Must Be Logged In To View This Page...</h1>
+    
+    <a href="{% url 'login' %}">Login Here</a>
+    
+     {% endif %} 
 
 {% endblock %}
