--- a/travel/templates/travel/add_travel.html
+++ b/travel/templates/travel/add_travel.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<!-- {% if user.is_authenticated %} -->
+{% if user.is_authenticated %}
 	<h1>Add Travel</h1>
 <br/><br/>
 
@@ -23,11 +23,11 @@
 
 <br/><br/>	
 
-<!-- {% else %}
+{% else %}
 <h1>Sorry! You Must Be Logged In To View This Page...</h1>
 
-<a href="{% url 'login' %}">Login Here</a> -->
+<a href="{% url 'login' %}">Login Here</a>
 
-<!-- {% endif %} -->
+ {% endif %}
 
 {% endblock %}
