--- a/travel/templates/travel/travel_list.html
+++ b/travel/templates/travel/travel_list.html
@@ -26,11 +26,13 @@
           </p>
         </div>
         {% if user.is_authenticated %}
-        <div class="card-footer text-muted">
-          <a href="{% url 'update-travel' travel.id %}" class="btn btn-outline-secondary btn-sm">Update Travel</a>
+          {% if user == travel.manager %}
+            <div class="card-footer text-muted">
+              <a href="{% url 'update-travel' travel.id %}" class="btn btn-outline-secondary btn-sm">Update Travel</a>
 
-          <a href="{% url 'delete-travel' travel.id %}" class="btn btn-outline-danger btn-sm">Delete Travel</a>
-        </div>
+              <a href="{% url 'delete-travel' travel.id %}" class="btn btn-outline-danger btn-sm">Delete Travel</a>
+            </div>      
+          {% endif %}
         {% endif %}
       </div>
       <br>
