--- a/travel/templates/travel/show_venue.html
+++ b/travel/templates/travel/show_venue.html
@@ -16,7 +16,9 @@
         <li>{{ venue.zip_code }}</li> 
         <li>{{ venue.phone }}</li> 
         <li>{{ venue.email_address }}</li> 
-        <li><a href="{{ venue.web }}">{{ venue.web }}</a></li>  
+        <li><a href="{{ venue.web }}">{{ venue.web }}</a></li>
+        <li>Owner: {{ venue_owner }}</li>  
+        <li>Owner' Email: {{ venue_owner.email }}</li>  
     </ul>  
       </p>
     </div>
