--- a/travel/templates/travel/search_venues.html
+++ b/travel/templates/travel/search_venues.html
@@ -5,7 +5,43 @@
 {% if searched %}
 <h1>You Seached For {{ searched }}</h1>
 {% for venue in venues %}
-   <a href="{% url 'show-venue' venue.id %}">{{ venue }}</a> <br>
+<div class="card">
+   <div class="card-header">
+       <strong>Venue</strong>
+   </div>
+   <div class="card-body">
+     <h5 class="card-title">{{ venue }}</h5>
+     <p class="card-text">
+       <ul> 
+         {% if venue.address %}
+      <li>{{ venue.address }}</li>
+      {% endif %}
+
+      {% if venue.zip_code %}
+       <li>{{ venue.zip_code }}</li> 
+       {% endif %}
+
+       {% if venue.phone %}
+       <li>{{ venue.phone }}</li> 
+       {% endif %}
+
+       {% if venue.email_address %}
+       <li>{{ venue.email_address }}</li>
+       {% endif %} 
+
+       {% if venue.web  %}
+       <li><a href="{{ venue.web }}">{{ venue.web }}</a></li>
+       {% endif %}
+
+       {% if venue.owner %}
+       <li>Owner ID: {{ venue.owner }}</li> 
+       {% endif %} 
+         
+   </ul>  
+     </p>
+   </div>
+ </div>
+ <br>
 {% endfor %}
 {% else %}
 <h1>Hey! You Forgot To Search For A Venue...</h1>
