--- a/travel/templates/travel/show_venue.html
+++ b/travel/templates/travel/show_venue.html
@@ -19,6 +19,10 @@
         <li><a href="{{ venue.web }}">{{ venue.web }}</a></li>
         <li>Owner: {{ venue_owner }}</li>  
         <li>Owner' Email: {{ venue_owner.email }}</li>  
+        <br>
+        {% if venue.venue_image %}
+          <img src="{{ venue.venue_image.url }} " width="500" alt=""> 
+        {% endif %}
     </ul>  
       </p>
     </div>
