added function: countdown of days to travel

--- a/travel/templates/travel/travel_list.html
+++ b/travel/templates/travel/travel_list.html
@@ -14,6 +14,8 @@
           <p class="card-text">
             <ul>
                 <li>Date: {{ travel.travel_date }} </li>
+                <li>Days Till Event: {{ travel.Days_till }}</li>
+                <li>Occured: {{ travel.Is_Past }}</li>
                 <li>Venue Website: {{ travel.venue.web }} </li>
                 <li>Manager: {{ travel.manager }} </li>
                 <li>Description {{ travel.description }} </li>
