--- a/travel/templates/travel/travel_list.html
+++ b/travel/templates/travel/travel_list.html
@@ -5,6 +5,7 @@
 <hr>
 
     {% for travel in travel_list %} 
+    {% if travel.approved %}
     <div class="card">
         <div class="card-header">
             <strong>{{ travel }}</strong>
@@ -19,6 +20,7 @@
                 <li>Venue Website: {{ travel.venue.web }} </li>
                 <li>Manager: {{ travel.manager }} </li>
                 <li>Description {{ travel.description }} </li>
+                <li>Approved: {{ travel.approved }}</li>
                 <li>Attendees: 
                 {% for user in travel.attendees.all %}
                 {{ user }}
@@ -38,5 +40,6 @@
         {% endif %}
       </div>
       <br>
+      {% endif %}
     {% endfor %} 
 {% endblock %}
