added checkboxes to travels at admin page

--- a/travel/templates/travel/home.html
+++ b/travel/templates/travel/home.html
@@ -1,7 +1,8 @@
 {% extends 'travel/base.html' %}
 
 {% block content %}
-    <h1>heloo {{ name }}</h1>
+    <h1>Hello {{ user }} !!!</h1>
+    <hr>
     {{ cal|safe }}
     <br><br>
     <h3>Travels This Month...</h3>
