--- a/travel/templates/travel/navbar.html
+++ b/travel/templates/travel/navbar.html
@@ -23,6 +23,8 @@
               <li><a class="dropdown-item" href="{% url 'add-travel' %}">Add Travel</a></li>
               <li><a class="dropdown-item" href="{% url 'my_travels' %}">My Travels</a></li>
               <li><a class="dropdown-item" href="{% url 'search_travels' %}">Search Travels</a></li>
+              
+
               {% endif %}
             </ul>
           </li>
@@ -48,6 +50,12 @@
             </ul>
           </li>
           {% if user.is_authenticated %}
+          {% if user.is_superuser %}
+              
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'admin_approval' %}">Admin</a>
+              </li>
+              {% endif %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
