--- a/travel/templates/travel/admin_approval.html
+++ b/travel/templates/travel/admin_approval.html
@@ -1,11 +1,25 @@
 {% extends 'travel/base.html' %} 
 {% block content %}
 
-<h1>Admin Travel Approval</h1>
+<h1>Admin Dashboard</h1>
 <br /><br />
 
 <form action="" method="post">
     {% csrf_token %}
+<div class="card">
+    <div class="card-header">
+        Travel - Venue - User Count List
+    </div>
+    <div class="card-body">
+        <p class="card-text">Travel Count: {{ travel_count }}</p>
+        <p class="card-text">Venue Count: {{ venue_count }}</p>
+        <p class="card-text">User Count: {{ user_count }}</p>
+    </div>
+</div>
+
+<br><hr>
+<h1>Travel Approval Form</h1>
+<br>
 
 
 <table class="table table-striped table-hover table-bordered">
