--- a/travel/templates/travel/admin_approval.html
+++ b/travel/templates/travel/admin_approval.html
@@ -16,6 +16,30 @@
         <p class="card-text">User Count: {{ user_count }}</p>
     </div>
 </div>
+<br><hr>
+
+
+<table class="table table-striped table-hover table-bordered">
+	<thead>
+		<tr>
+			<th scope="col">Venue Name</th>
+			<th scope="col">Travels</th>
+		</tr>
+	</thead>
+	<tbody>
+		{% for venue in venue_list %}
+		<tr>
+			<td>
+                <a href="{% url 'show-venue' venue.id%}">{{ venue }}</a> 
+            </td>
+            <td>
+                <a href="{% url 'venue-travels' venue.id %}" class="btn btn-sm btn-secondary">List Travels</a>
+                
+            </td>
+            {% endfor %}
+		</tr>
+	</tbody>
+</table>
 
 <br><hr>
 <h1>Travel Approval Form</h1>
