added pagination to travel list page

--- a/travel/templates/travel/home.html
+++ b/travel/templates/travel/home.html
@@ -4,6 +4,8 @@
     <h1>Hello {{ user }} !!!</h1>
     <hr>
     {{ cal|safe }}
+    <br>
+    {{ time }}
     <br><br>
     <h3>Travels This Month...</h3>
 
@@ -47,7 +49,7 @@
     {% endif %}
 
     <br><br><br>
-    copyright (c) {{ current_year }} <br> {{ time }}
+    copyright (c) {{ current_year }}
     <br><br><br>
     
 
