--- a/travel/templates/travel/travel_list.html
+++ b/travel/templates/travel/travel_list.html
@@ -42,4 +42,34 @@
       <br>
       {% endif %}
     {% endfor %} 
+
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+        
+     
+    
+    {% if travels.has_previous %}
+        <li class="page-item"><a class="page-link" href="?page=1">&laquo First</a></li>
+    
+        <li class="page-item"><a class="page-link" href="?page={{ travels.previous_page_number }}">Previous</a></li>
+        
+    {% endif %}
+    
+    
+    {% for i in nums %}
+        <li class="page-item"><a class="page-link" href="?page={{ forloop.counter }}">{{ forloop.counter }}</a></li>
+    
+    {% endfor %}
+    
+    
+    {% if travels.has_next %}
+        <li class="page-item"><a class="page-link" href="?page={{ travels.next_page_number }}">Next</a></li>
+    
+        <li class="page-item"><a class="page-link" href="?page={{ travels.paginator.num_pages }}">Last &raquo</a></li>
+    
+    {% endif %}
+    
+     </ul>
+    </nav>
+    <br><br>
 {% endblock %}
