--- a/travel/templates/travel/show_travel.html
+++ b/travel/templates/travel/show_travel.html
@@ -35,6 +35,7 @@
           <a href="{% url 'update-travel' travel.id %}" class="btn btn-outline-secondary btn-sm">Update Travel</a>
 
           <a href="{% url 'delete-travel' travel.id %}" class="btn btn-outline-danger btn-sm">Delete Travel</a>
+          <a href="{% url 'list-venues' %} " class="btn btn-outline-secondary btn-sm">Back to list</a>
         </div>      
       {% endif %}
     {% endif %}
