--- a/travel/templates/travel/show_venue.html
+++ b/travel/templates/travel/show_venue.html
@@ -37,5 +37,9 @@
     </div>
   </div>
   <br>
+  <a href="{% url 'list-venues' %} " class="btn btn-outline-secondary mb-3">Back to list</a>
+  
+  
+  <br>
 
 {% endblock %}
