--- a/travel/templates/travel/update_venue.html
+++ b/travel/templates/travel/update_venue.html
@@ -8,7 +8,8 @@
         {% csrf_token %}
         {{ form.as_p }}
         <br>
-        <input type="submit" value="Update" class="btn btn-secondary">
+        <input type="submit" value="Update" class="btn btn-secondary mb-3">
+        <a href="{% url 'list-venues' %} " class="btn btn-outline-danger mb-3">Cancel</a>
     </form>
     {% else %}
     <h1>Sorry! You Must Be Logged In To View This Page...</h1>
